other-vpol/block-ephemeral-containers/block-ephemeral-containers.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: block-ephemeral-containers
  annotations:
    policies.kyverno.io/minversion: 1.19.1
spec:
  validationActions: 
    - Audit
  evaluation:
    background:
      enabled: true
  matchConstraints:
    resourceRules:
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources: ["pods", "pods/ephemeralcontainers"] 
  validations:
   - expression: >-
      object.spec.?ephemeralContainers.orValue([]).all(container,
        has(exceptions.allowedValues) && string(container.name) in exceptions.allowedValues)
     message: "Ephemeral (debug) containers are not permitted."
