other-vpol/block-ephemeral-containers/.kyverno-test-exceptions/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: block-ephemeral-containers-exception
policies: [../block-ephemeral-containers.yaml]
resources: [../.kyverno-test/resource.yaml]
exceptions: [../.kyverno-test/exception.yaml]
results:
- isValidatingPolicy: true
  kind: Pod
  policy: block-ephemeral-containers
  resources: [default/badpod01]
  result: pass
- isValidatingPolicy: true
  kind: Pod
  policy: block-ephemeral-containers
  resources: [default/badpod02]
  result: fail
